<resources>
    <string name="app_name">Vosk Demo</string>
    <string name="hint">Initializing...</string>
    <string name="start_mic">Start Microphone</string>
    <string name="start_file">Start File</string>
    <string name="stop">Stop</string>
    <string name="control_start">Start</string>
    <string name="control_pause">Pause</string>
    <string name="control_resume">Resume</string>
    <string name="ready_to_start">Ready</string>
    <string name="speak_bengali">Speak Bengali</string>
    <string name="translate_to_english">Translate to English</string>
    <string name="translate_to_bengali">Translate to Bengali</string>
    <string name="speak_english">Speak English</string>
    <string name="input_language">Input language:</string>
    <string name="input_bengali">Bengali</string>
    <string name="input_english">English</string>
    <string name="english_translation_label">English translation:</string>
    <string name="bengali_translation_label">Bengali translation:</string>
    <string name="sentence_list_label">Sentence list:</string>
    <string name="save_list">Save list</string>
    <string name="load_list">Load list</string>
    <string name="play">Play</string>
    <string name="translate">Translate</string>
    <string name="list_saved">List saved</string>
    <string name="list_loaded">List loaded</string>
    <string name="list_empty">No sentences to save</string>
    <string name="no_saved_list">No saved list found</string>
    <string name="next">Next</string>
    <string name="prev_lesson">Previous lesson</string>
    <string name="next_lesson">Next lesson</string>
    <string name="lesson_nav_first">First lesson in list</string>
    <string name="lesson_nav_last">Last lesson in list</string>
    <string name="lesson_nav_no_context">Open a lesson from the menu to use prev/next</string>
    <string name="mode_bar_prev_block">Previous block</string>
    <string name="mode_bar_next_block">Next block</string>
    <string name="skip">Skip word</string>
    <string name="save_list_name_hint">List name</string>
    <string name="save_list_dialog_title">Save list as</string>
    <string name="load_list_dialog_title">Choose a list to load</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="delete">Delete</string>
    <string name="expected_label">Expected:</string>
    <string name="heard_label">Heard:</string>
    <string name="you_said_label">You said:</string>
    <string name="try_again">Try again</string>
    <string name="no_speech_detected">No speech detected. Tap Next to try again.</string>
    <string name="load_sentence_list">Load sentence list (.json)</string>
    <string name="load_lesson">Load lesson (.txt)</string>
    <string name="load_dialog_title">Load</string>
    <string name="select_mode_title">Select learning mode</string>
    <string name="mode_1_title">Mode 1: Bengali → English</string>
    <string name="mode_1_desc">Hear Bengali Q&amp;A, say English (question then answer)</string>
    <string name="mode_2_title">Mode 2: Listen &amp; Answer</string>
    <string name="mode_2_desc">Hear English question, say English answer</string>
    <string name="mode_3_title">Mode 3: Read Bengali, ask in English</string>
    <string name="mode_3_desc">See Bengali, say question in English, hear answer</string>
    <string name="lesson_loaded">Lesson loaded. Tap Next to start.</string>
    <string name="lesson_done">Lesson done!</string>
    <string name="load_verb">Learn verb</string>
    <string name="select_verb_title">Select verb</string>
    <string name="load_tenses">Learn tenses (12 tenses)</string>
    <string name="select_subject_title">Select subject</string>
    <string name="load_regular_verbs">Learn regular verbs</string>
    <string name="load_irregular_verbs">Learn irregular verbs</string>
    <string name="load_practice_incorrect">Practice incorrect words</string>
    <string name="no_incorrect_saved">No incorrect words saved yet.</string>
    <string name="menu_parts_of_speech">Parts of speech</string>
    <string name="menu_svo_sentences">SVO sentences</string>
    <string name="parts_of_speech_title">Parts of speech</string>
    <string name="svo_sentences_title">Subject + Verb + Object</string>
    <string name="svo_topic_title">SVO: Subject + Verb + Object</string>
    <string name="svo_list_label">List of sentences (translate to Bengali below)</string>
    <string name="load_svo_sentences">Load SVO sentences</string>
    <string name="lesson_topic_hint">Vosk Demo</string>
    <string name="bengali_to_english">Bengali to English</string>
    <string name="english_to_bengali">English to Bengali</string>
    <string name="bengali_meaning_label">Bengali meaning</string>
    <string name="english_meaning_label">English meaning</string>
    <string name="lecture_play">Play lecture</string>
    <string name="lecture_pause">Pause lecture</string>
    <string name="playback_last">Play last recording</string>
    <string name="description_label">Description</string>
    <string name="description_svo_format">Here subject is \"%1$s\", verb is \"%2$s\" and object is \"%3$s\".</string>
    <string name="description_third_person_hint">When he, she, it or a name is used, add -s or -es to the verb.</string>
    <string name="speak_instruction">Speak instruction</string>
    <string name="pronunciation_lesson_hint">Tap the play (lecture) button above to hear each word.</string>
    <string name="pronunciation_lesson_choose">Choose pronunciation lesson</string>
    <string name="pronunciation_repeat_hint">Repeat the word after you hear it.</string>
    <string name="pronunciation_moving_next">Moving to next word.</string>
    <string name="pronunciation_try_again_chances">Try again. %d chance(s) left.</string>
    <string name="load_introduction">Load introduction (Bengali)</string>
    <string name="introduction_topic">Introduction</string>
    <string name="introduction_loaded">Introduction loaded. Speaking…</string>
    <string name="not_available_yet">Not available yet.</string>
    <string name="threecol_filter_all_passed">All sentences passed! Showing all.</string>
    <string name="threecol_filter_showing_n">Showing %1$d of %2$d sentences</string>
    <string name="extend_sentence_you_said">You said: %1$s</string>
    <string name="extend_sentence_use_learning_or_practice">Use Learning, Practice, or Test for audio.</string>
    <string name="extend_sentence_test_instruction">Now speak the rest of the sentences, one at a time.</string>
    <string name="extend_sentence_test_placeholder">Speak here…</string>
</resources>
